--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,16 @@ spring:
     url: jdbc:mariadb://localhost:3306/gallery
     username: jiheon2234
     password: '0000'
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: debug
